# rewatch

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  process.rs  watcher.rs
