[package]
name = "rewatch"
version = "0.1.0"
edition = "2024"
description = "Cross-platform file watcher that restarts commands on changes"
license = "MIT"
repository = "https://github.com/holovskyi/rewatch"
readme = "README.md"
keywords = ["watch", "file-watcher", "restart", "dev-tools"]
categories = ["development-tools", "command-line-utilities"]

[profile.release]
strip = true
lto = true
opt-level = "z"

[dependencies]
notify = "7"
process-wrap = { version = "9", features = ["std"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
ctrlc = "3"
shlex = "1"
