[package]
name = "rewatch"
version = "0.4.1"
edition = "2024"
description = "File watch and restart tool — a smarter cargo-watch alternative for AI coding agents. Waits for you (or a trigger file) instead of rebuilding on every save."
license = "MIT"
repository = "https://github.com/holovskyi/rewatch"
readme = "README.md"
keywords = ["watch", "restart", "dev-tools", "ai-agent", "claude-code"]
categories = ["development-tools", "command-line-utilities"]

[profile.release]
strip = true
lto = true
opt-level = "z"

[dependencies]
notify = "7"
process-wrap = { version = "9", features = ["std"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
ctrlc = "3"
shlex = "1"
